--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hurbal Cafe</title>
+    <title>Minty Melody</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
