--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
         <div id=wrap>
             <div class=menu>
                 <h1 class=char1>
-                    <a href=#>
-                      <img src=# alt="logo">
+                    <a href="https://www.minty.blue/">
+                      <img src="l_cr.png" alt="logo" width="75px" height="75px">
                     </a>
                  </h1>
              <div class=sns>
                  <ul>
                      <li>
-                         <a href=# target="_blank">
+                         <a class=twitter href="https://twitter.com/dingy_hi" target="_blank">
                              <span>
-                                <img src="#" width="30px" height="30px" alt="Twitter">
+                                <img src="t_cr.png" width="30px" height="30px" alt="Twitter">
                              </span>
                          </a>
                      </li>
                      <li>
-                        <a href=# target="_blank">
+                        <a class=insta href=https://www.instagram.com/memiltea/ target="_blank">
                             <span>
-                                <img src="#" width="30px" height="30px" alt="Instagram">
+                                <img src="i_cr.png" width="30px" height="30px" alt="Instagram">
                             </span>
                         </a>
                      </li>
@@ -56,7 +56,7 @@
                                 <img src="#" width="20px" height="20px" alt="">
                             </span>
                             <span class="list_text">
-                                Profile
+                                About
                             </span>
                         </a>
                     </li>
@@ -82,17 +82,39 @@
         </div>
         <div id=contents>
             <div id=gallery>
-             <div class=div21><p>b</p></div>
+                <div class=gs>
+                    <p>gallery</p>
+                </div>
+                <div class=gwrap>
+                    <div class=g1></div>
+                    <div class=g2></div>
+                    <div class=g3></div>
+                    <div class=g4></div>
+                    <div class=g5></div>
+                    <div class=g6></div>
+                    <div class=g7></div>
+                    <div class=g8></div>
+                </div>
             </div>
-            <div id=profile>
-               <p>c</p>
+            <div id=about>
+                <div class=as>
+                    <p>About</p>
+                </div>
+               <div class=atext>
+                    <p>c</p>
+                </div>
+                <div class=apic></div>
             </div>
             <div id=contect>
+                <div class=cs>
+                    Contect
+                </div>
                 <div class=form>
                     
                 </div>
                 <p>mail
-                    <br>
+                    <br>twitter
+                    <br>instagram
                 </p>
 
             </div>
